youfull/objects/Leader_Downline_Summary__c.object
<CustomObject>
    <fields>
        <fullName>PRSNL_SLS_AMT__c</fullName>
        <formula>( INVC_AWRD_SLS_AMT__c + INVC_RTURN_AWRD_SLS_AMT__c + SUBMTD_AWRD_SLS_AMT__c + SUBMTD_RTURN_AWRD_SLS_AMT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal QV Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AWRD_AMT__c</fullName>
        <formula>INVC_AWRD_SLS_AMT__c +  SUBMTD_AWRD_SLS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_BLW_QLFR_REP_CNT__c</fullName>
        <label>Representative Below Personal Qualifier</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QLFYNG_STUS_PCT__c</fullName>
        <label>Qualifying Status (G1 SL Leader Color)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REQD_GENRTN_1_LDR_CNT_TXT__c</fullName>
        <formula>IF (AND (( NOT(ISNULL( GENRTN_1_LDR_CNT_TXT__c ))), LEN(GENRTN_1_LDR_CNT_TXT__c) = 7 ), 

 IF(
(VALUE( LEFT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( LEFT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ) &gt; 0, 
TEXT( VALUE( LEFT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( LEFT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ), 
&quot;0&quot;) 

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 3,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 3,1) ) ) &gt;0,
TEXT( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 3,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 3,1)) ),
&quot;0&quot;)

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 5,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 5,1) ) )&gt;0, 
TEXT( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 5,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 5,1) ) ),
&quot;0&quot;)

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( RIGHT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( RIGHT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ) &gt;0,
TEXT( VALUE( RIGHT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE(RIGHT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ),
&quot;0&quot;)
 
, 


IF (AND (( NOT(ISNULL( GENRTN_1_LDR_CNT_TXT__c ))), LEN(GENRTN_1_LDR_CNT_TXT__c) = 8 ), 

 IF(
(VALUE( LEFT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( LEFT(GENRTN_1_LDR_CNT_TXT__c , 2) ) ) &gt; 0, 
TEXT( VALUE( LEFT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( LEFT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ), 
&quot;0&quot;) 

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 3,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 4,1) ) ) &gt;0,
TEXT( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 3,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 4,1)) ),
&quot;0&quot;)

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 5,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 6,1) ) )&gt;0, 
TEXT( VALUE( MID( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 5,1) ) - VALUE( MID(GENRTN_1_LDR_CNT_TXT__c , 6,1) ) ),
&quot;0&quot;)

&amp; &quot;-&quot; &amp; 

IF(
( VALUE( RIGHT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE( RIGHT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ) &gt;0,
TEXT( VALUE( RIGHT( NXT_TITL_LVL_KEY__r.MIN_GENRTN_1_LDR_CNT_TXT__c , 1) ) - VALUE(RIGHT(GENRTN_1_LDR_CNT_TXT__c , 1) ) ),
&quot;0&quot;)
 
, &quot;Invalid Format&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gap to Next Title in G1 Leaders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <label>Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_EXEC_UNIT_SLS__c</fullName>
        <label>SPPY Executive Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_1_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Exec Gen 1 Exec Title Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_2_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Exec Gen 2 Exec Title Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_3_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Exec Gen 3+ Exec Title Staff</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_EXGENRTN_TH_TOTAL_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY_EXGENRTN_TH_TOTAL_EXEC_TITL_STF_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_ACTV_REP_CNT__c</fullName>
        <label>SPPY G1 Actives</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_ACT_PCT__c</fullName>
        <label>SPPY Generation 1 Activity Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_ACT_PERC__c</fullName>
        <label>SPPY_GENRTN_1_ACT_PERC</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_0_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 0 Leader Count (Candida</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_10_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 10 Leader Count (EL)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_TITL_11_STF_CNT__c</fullName>
        <label>SPPY Gen 1 Title 11 Leader Count (SEL1)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_1_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_1_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENRTN_2_ACTV_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_ACT_PCT__c</fullName>
        <label>SPPY_GENRTN_2_ACT_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_ACT_PC__c</fullName>
        <label>SPPY Generation 2 Activity Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_APPT_CNT__c</fullName>
        <label>SPPYGeneration 2 Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_2_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_2_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENRTN_3_ACTV_REP_CNT</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_ACT_PCT__c</fullName>
        <label>SPPY Generation 3 Activity Rate</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_APPT_CNT__c</fullName>
        <label>SPPYGeneration 3 Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENRTN_3_UNIT_SLS_AMT__c</fullName>
        <label>SPPY_GENRTN_3_UNIT_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENTRTN_2_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENTRTN_2_ACTV_REP_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GENTRTN_3_ACTV_REP_CNT__c</fullName>
        <label>SPPY_GENTRTN_3_ACTV_REP_CNT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>SPPY Total Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_GRP_UNIT_SLS_AMT__c</fullName>
        <label>SPPY Total Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LOA1_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales LOA1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_LOA_1_6_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales LOA1-6</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_GENRTN_1_EXEC_TITL_STF_CNT__c</fullName>
        <label>SPPY Total Gen 1 Executive Title Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_N_CMPGNS_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales in N Campaigns</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_TSRP_GRP_UNIT_SLS__c</fullName>
        <label>SPPY Total Unit Sales TopSeller</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_UNIT_APPT_CNT__c</fullName>
        <label>SPPY Unit Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_UNIT_QPA_CNT__c</fullName>
        <label>SPPY Unit Qualified Appointments</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_YTD_GRP_NET_SLS_AMT__c</fullName>
        <label>SPPY YTD Unit Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPPY_YTD_GRP_UNIT_SLS_AMT__c</fullName>
        <label>SPPY YTD Net Sales</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_AWRD_SLS_AMT__c</fullName>
        <label>Submitted Order Amount</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SUBMTD_RTURN_AWRD_SLS_AMT__c</fullName>
        <label>Return Award Sales Submitted</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_GENRTN_1_EXEC_TITL_STF_CNT__c</fullName>
        <label>Total Gen 1 Executive Title Count</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTAL_N_CMPGNS_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales in N Campaigns</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TSRP_GRP_UNIT_SLS__c</fullName>
        <label>Total Unit Sales TopSeller</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TTL_LEG_CNT__c</fullName>
        <label>SL Downline Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_GRP_BLCKD_UNIT_SLS_AMT__c</fullName>
        <label>YTD Blocked Unit Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_GRP_NET_SLS_AMT__c</fullName>
        <label>YTD Unit Net Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD_GRP_UNIT_SLS_AMT__c</fullName>
        <label>Year to Date Group Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Leadership Summary (DO NOT USE)</label>
    <nameField>
        <label>Leader Downline Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leadership Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>